# kafka-collector

./: .gitignore  Makefile  README.md  pyproject.toml  release.docker.env  release.env  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build-docker-image.yml  build.yaml
docker/: Dockerfile
docker-compose/: Makefile  README.md  docker-compose.yml  feed-data.sh
docs/: cli-mode.md  service-mode.md
kubernetes/: README.md  configmap.yaml  deployment.yaml  service.yaml
scripts/: set-version.sh
src/kafka_collector/: args.py  cli.py  constants.py  exceptions.py  file_manager.py  http_args.py  logging_config.py  models.py  service.py  service_helpers.py
testing/: docker-compose.yml  feed-data.sh  kafka-down.sh  kafka-up.sh
tests/: test_args.py  test_cli.py  test_file_manager.py  test_http_args.py  test_logging_config.py  test_service.py  test_service_helpers.py
tests/expected-output/: cli-help.txt  cli-help312.txt  cli-version.txt  cli-wrong-options.txt
